# CSP-JSON

./: CMakeLists.txt  LICENSE.txt  README.md  cj-csp-json.h
.github/workflows/: test.yml
cj/: cj-csp-io.c  cj-csp-io.h  cj-csp.c  cj-csp.h
data/: README.md
data/human/: 0af62ee6-52ed-4483-a625-6d05a5ef2adf.json
data/test/: min.json  small.json
scripts/: build.nix  build.sh  single-header-is-commited.sh  single-header-make.sh  test.sh
test/: CMakeLists.txt  cj-echo.tcl  cj-gen-urbcsp.tcl  cj-is-solved.tcl  cj-test-cpp-compilation.cpp  cj-test-csp-io.c  cj-test-csp.c  cj-test-is-solved.c  cj-test-roundtrip.c  cj-test-validation.c  cj-validate.tcl  common.h  test-on-files.c  test-on-files.h  test.h  test.tcl
test-exe/: conftest.py  test_cj-echo.py  test_cj-gen-urbcsp.py  test_cj-is-solved.py  test_cj-validate.py
test/data/: key-not-string.json  one-solution.json
test/data/validation-neg/: constraint_id_hi.json  constraint_id_lo.json  constraint_var_hi.json  constraint_var_lo.json  constraint_vars_arity.json  var_hi.json  var_lo.json
tools/cj-echo/: CMakeLists.txt  main.c
tools/cj-gen-urbcsp/: CMakeLists.txt  README.md  urbcsp.c
tools/cj-is-solved/: CMakeLists.txt  main.c
tools/cj-validate/: CMakeLists.txt  main.c
